--- a/src/main/resources/static/new_home.css
+++ b/src/main/resources/static/new_home.css
@@ -537,3 +537,14 @@ nav .fa-bars:hover {
     border: 2px solid rgba(255, 255, 255, 0.1);
     box-shadow: 0 0 40px rgb(8 7 16 / 60%);
 }
+.input-wrap-discount{
+    display: flex;
+    justify-content: center;
+    padding: 0.5em 0;
+    color: black;
+    border-radius: 8px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 13px;
+}
