--- a/src/main/resources/templates/admin_discount.html
+++ b/src/main/resources/templates/admin_discount.html
@@ -46,29 +46,35 @@
     </nav>
 </header>
 <body>
-<div class="container-back">
-    <div class="tableFixHead">
+<div class="container-profile">
+    <div class="container-income_inside">
+        <h1>Felhasználó adatai:</h1>
+
         <table>
             <tr>
-                <th>Cégnév</th>
-                <th>Cím</th>
-                <th>E-mail</th>
-                <th>Adószám</th>
-                <th>Aktivált</th>
-                <th>Kedvezmény</th>
+                <td>Cégnév <span data-th-text="${user.companyName}"></span></td>
             </tr>
             <tr>
-                <td data-th-text="${user.companyName}"></td>
-                <td data-th-text="${user.address}"></td>
-                <td data-th-text="${user.email}"></td>
-                <td data-th-text="${user.taxNumber}"></td>
-                <td data-th-text="${user.enabled}"></td>
-                <td data-th-text="${user.discount}"></td>
+                <td>Cím <span data-th-text="${user.address}"></span></td>
+            </tr>
+            <tr>
+                <td>E-mail <span data-th-text="${user.email}"></span></td>
+            </tr>
+            <tr>
+                <td>Adószám: <span data-th-text="${user.taxNumber}"></span></td>
+            </tr>
+            <tr>
+                <td>Aktivált: <span data-th-text="${user.enabled}"></span></td>
+            </tr>
+            <tr>
+                <td>Kedvezmény: <span data-th-text="${user.discount}"></span></td>
+            </tr>
+            <tr>
+                <td><form method="post" data-th-action="@{/admin/user/update}" th:object="${user}">
+                    <input class="input-wrap-discount" type="hidden" data-th-field="*{email}">
+                    <input placeholder="Kedvezmény" class="input-wrap-discount" type="number" data-th-field="*{discount}"><button class="button2" type="submit">Módosítás</button></form></td>
             </tr>
         </table>
-        <td><form method="post" data-th-action="@{/admin/user/update}" th:object="${user}">
-            <input class="input-wrap" type="hidden" data-th-field="*{email}">
-            <input class="input-wrap" type="number" data-th-field="*{discount}"><button class="button2" type="submit">Hozzáadás</button></form></td>
     </div>
 </div>
 <script>
