--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -66,11 +66,11 @@
                 <td data-th-text="${product.amount}"></td>
             <tr>
                 <th>Összesen:</th>
-            <th>Az ön kedvezményes összege:</th>
+            <th data-th-unless="${amount == amountwd}" >Az ön kedvezményes összege:</th>
             </tr>
             <tr>
                 <td data-th-text="${amount}"></td>
-                <td data-th-text="${amountwd}"></td>
+                <td data-th-unless="${amount == amountwd}" data-th-text="${amountwd}"></td>
             </tr>
         </table>
     </div>
