--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -41,7 +41,7 @@
                 <ul>
                     <li><a href="/home">Kezdőlap</a></li>
                     <li><a href="/connections">Kapcsolat</a></li>
-                    <li><a href="/cart">Kosár</a></li>
+                    <li><a href="/cart"><span id="homeCart"></span></a></li>
                 </ul>
             </div>
             <i class="fas fa-bars" id="menu-btn"></i>
