--- a/src/main/resources/templates/admin_upload.html
+++ b/src/main/resources/templates/admin_upload.html
@@ -18,7 +18,7 @@
                     <li><span id="toggleNews">    </span><a href="/admin/upload">Termékfeltöltés</a></li>
                     <li><span id="toggleMarket">    </span><a href="/admin/income">Bevétel</a></li>
                     <li><span id="toggleAbout">    </span><a href="/admin/users">Felhasználók</a></li>
-                    <li><span id="toggleProjects">    </span><a href="/admin/orders">None</a></li>
+                    <li><span id="toggleProjects">    </span><a href="/admin/completedOrders">Teljesített megrendelések</a></li>
                     <li><span id="toggleCart">    </span><a href="/cart">Kosár</a></li>
                     <li><span id="toggleDoor">    </span><a href="/logout">Kijelentkezés</a></li>
                 </ul>
