--- a/src/main/resources/templates/new_home.html
+++ b/src/main/resources/templates/new_home.html
@@ -42,7 +42,7 @@
                     <li><a href="/cart"><span id="homeCart"></span></a></li>
                 </ul>
                 <form th:action="@{/home}">
-                    <input  class="input-wrap-search" type="text" placeholder="search..." name="keyword" th:value="${keyword}" />
+                    <input  class="input-wrap-search" type="text" placeholder="Keresés" name="keyword" th:value="${keyword}" />
                     <button type="submit">
                         <i class="fas fa-search"></i>
                     </button>
