--- a/src/main/resources/templates/admin_discount.html
+++ b/src/main/resources/templates/admin_discount.html
@@ -25,9 +25,9 @@
                     <li><span id="toggleDoor">    </span><a href="/logout">Kijelentkezés</a></li>
                     <li><h5>Kövess minket!</h5></li>
                     <ul class="social-media">
-                        <li><a href="https://facebook.com/"><img data-th-src="@{facebook.png}"></a></li>
-                        <li><a href="https://www.instagram.com/"><img data-th-src="@{instagram.png}"></a></li>
-                        <li><a href="https://www.linkedin.com/"><img data-th-src="@{linkedin.png}"></a></li>
+                        <li><a href="https://facebook.com/"><img data-th-src="@{/facebook.png}"></a></li>
+                        <li><a href="https://www.instagram.com/"><img data-th-src="@{/instagram.png}"></a></li>
+                        <li><a href="https://www.linkedin.com/"><img data-th-src="@{/linkedin.png}"></a></li>
                     </ul>
                 </ul>
             </div>
