--- a/src/main/resources/static/new_home.css
+++ b/src/main/resources/static/new_home.css
@@ -292,13 +292,6 @@ nav.fa-bars {
     transition: 0.3s;
     text-align: right;
 }
-nav .fa-bars {
-    font-size: 1.2em;
-    cursor: pointer;
-    transition: 0.3s;
-    text-align: right;
-}
-
 nav .fa-bars:hover {
     color: #e54416;
 }
@@ -361,9 +354,49 @@ nav .fa-bars:hover {
     color: white;
 }
 
+
 .menu-open {
     height: 100vh;
     opacity: 1;
+}
+.container-inner .menu-btn {
+    width: 120px;
+    height: 60px;
+    border-radius: 5px;
+    cursor: pointer;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+.line1, .line2, .line3 {
+    background: #fff;
+    width: 40px;
+    height: 3px;
+    border-radius: 5px;
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 90%;
+    transform: translate(-50%,-50%);
+    transition: transform 0.5s;
+}
+.line1 {
+    width: 20px;
+    transform: translate(-22px,-20px);
+    transform-origin: 0 0;
+}
+.line3 {
+    width: 20px;
+    transform: translate(0px, 18px);
+    transform-origin: 100% 0;
+}
+.openmenu .line1{
+    transform: translate(0,0) rotate(-45deg);
+}.openmenu .line2{
+    transform: translate(-50%,-50%) rotate(45deg);
+}.openmenu .line3{
+    transform: translate(-21px,0) rotate(-45deg);
 }
 
 .navbar-active {
