--- a/src/main/resources/templates/new_home.html
+++ b/src/main/resources/templates/new_home.html
@@ -49,8 +49,12 @@
                         <i class="fas fa-search"></i>
                     </button>
                 </form>
+                <div id="menu-btn">
+                    <span class="line1"></span>
+                    <span class="line2"></span>
+                    <span class="line3"></span>
+                </div>
             </div>
-            <i class="fas fa-bars" id="menu-btn"></i>
         </div>
     </nav>
 </header>
@@ -86,6 +90,13 @@
         </div>
     </div>
 <script>
+    let menuX = document.getElementById("menu-btn");
+    menuX.onclick = function () {
+        menuX.classList.toggle("openmenu")
+    }
+
+
+
     const navLinks = document.querySelectorAll('.inputBox li');
     const menBtn = document.getElementById('menu-btn');
     const navBar = document.getElementById('navbar');
