--- a/src/main/resources/templates/admin_income.html
+++ b/src/main/resources/templates/admin_income.html
@@ -22,7 +22,7 @@
                     <li><span id="toggleMarket">    </span><a href="/admin/income">Bevétel</a></li>
                     <li><span id="toggleAbout">    </span><a href="/admin/users">Felhasználók</a></li>
                     <li><span id="toggleProjects">    </span><a href="/admin/completedOrders">Teljesített megrendelések</a></li>
-                    <li><span id="toggleCart">    </span><a href="/cart">Kosár</a></li>
+                    <li><span id="toggleCart">    </span><a href="/admin/pastproducts">Előző évi adatok</a></li>
                     <li><span id="toggleDoor">    </span><a href="/logout">Kijelentkezés</a></li>
                     <li><h5>Kövess minket!</h5></li>
                     <ul class="social-media">
