--- a/src/main/resources/templates/new_home.html
+++ b/src/main/resources/templates/new_home.html
@@ -49,10 +49,8 @@
                         <i class="fas fa-search"></i>
                     </button>
                 </form>
-                <div id="menu-btn">
-                    <span class="line1"></span>
-                    <span class="line2"></span>
-                    <span class="line3"></span>
+                <div>
+                    <i class="fas fa-bars" id="menu-btn"></i>
                 </div>
             </div>
         </div>
