--- a/src/main/resources/templates/new_home.html
+++ b/src/main/resources/templates/new_home.html
@@ -20,7 +20,6 @@
                     <li><span id="toggleMarket">    </span><a href="/home">Bolt</a></li>
                     <li><span id="toggleCart">    </span><a href="/cart">Kosár</a></li>
                     <li><span id="toggleAbout">    </span><a href="/userprofile">Fiókom</a></li>
-                    <li><span id="toggleProjects">    </span><a href="#">Üres</a></li>
                     <li><span id="toggleDoor">    </span><a href="/logout">Kijelentkezés</a></li>
                     <li><h5>Kövess minket!</h5></li>
                     <div>
@@ -78,7 +77,7 @@
 
                     <td th:text="${datas.articleName}">Name:</td>
 
-                    <td th:text="${datas.price}">Name:</td>
+                    <td th:text="${datas.price}+' '+Ft">Name:</td>
                     <!--TODO Lassú betöltés  -->
                     <td><form method="post" data-th-action="@{/home/{EANCode}(EANCode=${datas.EANCode})}">
                         <input class="input-wrap" type="number" name="quantity"><button class="button2" type="submit">Hozzáadás</button></form></td>
