--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -45,7 +45,7 @@
                     <li><a href="/cart"><span id="homeCart"></span></a></li>
                 </ul>
                 <form th:action="@{/orders}">
-                    <input  class="input-wrap-search" type="text" placeholder="search..." name="keyword" th:value="${keyword}" />
+                    <input  class="input-wrap-search" type="text" placeholder="rendelés szám" name="keyword" th:value="${keyword}" />
                     <button type="submit">
                         <i class="fas fa-search"></i>
                     </button>
